# Bank_Exercise

./: .agent.md  Bank_Exercise.md  CMakeLists.txt  README.md
Include/: Account.h  AccountId.h  AccountService.h  ApiHttpResponse.h  ApiRequestValidation.h  CustomerAccount.h  CustomerInformation.h  DBOperationResult.h  EnterpriseAccount.h  EnterpriseInformation.h  FakeDBConnection.h  IAccount.h  IAccountService.h  IDBConnection.h  ITransaction.h  Server.h
Source/: Account.cpp  AccountService.cpp  CustomerAccount.cpp  EnterpriseAccount.cpp  FakeDBConnection.cpp  Server.cpp  main.cpp
Tests/: .agent.md  CustomerAccountTests.cpp  FakeDBConnectionTests.cpp
UI/: README.md  index.html
UnitTests/: .agent.md  AccountServiceTests.cpp  AccountTests.cpp  ApiHttpResponseTests.cpp  ApiRequestValidationTests.cpp  EnterpriseAccountTests.cpp
docs/: API.md  SOFTWARE_ARCHITECTURE.md  architecture-class.puml  architecture-component.puml  architecture-sequence.puml
